update ReservationService